--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
    <style type="text/css">
       @font-face {
          font-family: 'poppins-bold';
-         src: url(https://codingclap.github.io/botsync-newsletter-october-2022/fonts/Poppins-Bold.ttf)format('opentype');
+         src: url(https://codingclap.github.io/botsync-newsletter_nov/fonts/Poppins-Bold.ttf)format('opentype');
       }
 
       @font-face {
          font-family: 'poppins-medium';
-         src: url(https://codingclap.github.io/botsync-newsletter-october-2022/fonts/Poppins-Medium.ttf)format('opentype');
+         src: url(https://codingclap.github.io/botsync-newsletter_nov/fonts/Poppins-Medium.ttf)format('opentype');
       }
 
       @font-face {
          font-family: 'poppins-mediumitalic';
-         src: url(https://codingclap.github.io/botsync-newsletter-october-2022//fonts/Poppins-MediumItalic.ttf)format('opentype');
+         src: url(https://codingclap.github.io/botsync-newsletter_nov/fonts/Poppins-MediumItalic.ttf)format('opentype');
       }
 
       @font-face {
          font-family: 'poppins-regular';
-         src: url(https://codingclap.github.io/botsync-newsletter-october-2022/fonts/Poppins-Regular.ttf)format('opentype');
+         src: url(https://codingclap.github.io/botsync-newsletter_nov/fonts/Poppins-Regular.ttf)format('opentype');
       }
 
       @font-face {
          font-family: 'poppins-semibold';
-         src: url(https://codingclap.github.io/botsync-newsletter-october-2022/fonts/Poppins-SemiBold.ttf)format('opentype');
+         src: url(https://codingclap.github.io/botsync-newsletter_nov/fonts/Poppins-SemiBold.ttf)format('opentype');
       }
 
       .MsoNormal {
@@ -180,7 +180,7 @@
                                                          <tr>
                                                             <td>
                                                                <img border="0" width="100%"
-                                                                  src="images/header-november.jpg"
+                                                                  src="https://codingclap.github.io/botsync-newsletter_nov/images/header-november.jpg"
                                                                   alt="Botsync Newsletter" title="Botsync Newsletter"
                                                                   style="display:block" class="to100pc">
                                                             </td>
@@ -234,7 +234,7 @@
                                                    style="font-family:'Arial',sans-serif; background-color:#fff; text-align:left; width:100%; padding: 10px 0px 10px 0px;">
 
                                                    <img border="0" width="100%"
-                                                      src="images/second-header.jpg"
+                                                      src="https://codingclap.github.io/botsync-newsletter_nov/images/second-header.jpg"
                                                       alt="botsync-newsletter" style="display:block" class="to100pc">
                                                 </td>
 
@@ -545,7 +545,7 @@
                                                                      target="_blank"
                                                                      data-saferedirecturl="https://www.linkedin.com/posts/botsync_materialflow-industrialautomation-exhibitions-activity-6988460220951777281-7nue/?utm_source=share&utm_medium=member_android"><img
                                                                         alt="" width="280px"
-                                                                        src="images/ITAP-november.png"
+                                                                        src="https://codingclap.github.io/botsync-newsletter_nov/images/ITAP-november.png"
                                                                         style="margin-top: 0px; border:0"></a>
                                                                </p>
                                                                <!-- <a style="font-size:18px;font-family: 'poppins-semibold',sans-serif;color:#ed7d31;text-align:center;text-decoration:none;display:block;font-weight:bold;line-height:20px;background-color:#fff;padding:25px 0px 20px 0px;letter-spacing:0.5px;border-radius:0px;text-decoration: none;"
@@ -604,7 +604,7 @@
                                                    style="font-family:'Arial',sans-serif; background-color:#fff; text-align:left; width:100%; padding: 10px 0px 10px 0px;">
 
                                                    <img border="0" width="100%"
-                                                      src="images/november-line.png"
+                                                      src="https://codingclap.github.io/botsync-newsletter_nov/images/november-line.png"
                                                       alt="botsync" style="display:block" class="to100pc">
                                                 </td>
 
@@ -634,7 +634,7 @@
                                                             <td valign="top" align="left">
                                                                <p style="padding:0;margin:8px 0; text-align:left;">
                                                                   <img alt="" width="320px"
-                                                                     src="images/annual-company-retret-november.png"
+                                                                     src="https://codingclap.github.io/botsync-newsletter_nov/images/annual-company-retret-november.png"
                                                                      style="margin-top: 0px; border:0">
                                                                </p>
                                                             </td>
@@ -707,7 +707,7 @@
                                                    style="font-family:'Arial',sans-serif; background-color:#fff; text-align:left; width:100%; padding: 10px 0px 10px 0px;">
 
                                                    <img border="0" width="100%"
-                                                      src="images/november-line.png"
+                                                      src="https://codingclap.github.io/botsync-newsletter_nov/images/november-line.png"
                                                       alt="botsync" style="display:block" class="to100pc">
                                                 </td>
 
@@ -782,7 +782,7 @@
                                                                   <a href="https://www.businesstimes.com.sg/global-enterprise/toll-group-looking-to-expand-footprint-across-asia"
                                                                      data-saferedirecturl="https://www.businesstimes.com.sg/global-enterprise/toll-group-looking-to-expand-footprint-across-asia"
                                                                      target="_blank"><img alt="" width="320px"
-                                                                        src="images/troll-innovation_november.png"
+                                                                        src="https://codingclap.github.io/botsync-newsletter_nov/images/troll-innovation_november.png"
                                                                         style="margin-top: 0px; border:0"></a>
                                                                </p>
                                                             </td>
@@ -813,7 +813,7 @@
                                                    style="font-family:'Arial',sans-serif; background-color:#fff; text-align:left; width:100%; padding: 10px 0px 0px 0px;">
 
                                                    <img border="0" width="100%"
-                                                      src="images/footer-banner.jpg"
+                                                      src="https://codingclap.github.io/botsync-newsletter_nov/images/footer-banner.jpg"
                                                       alt="botsync-newsletter" style="display:block" class="to100pc">
                                                 </td>
 
