--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                                                 <td valign="top"
                                                    style="font-family:'Arial',sans-serif; background-color:#fff; text-align:left; width:100%; padding: 10px 0px 10px 0px;">
 
-                                                   <img border="0" width="100%"
+                                                   <a hraf="https://www.youtube.com/watch?v=ZH4-2Netrog&feature=youtu.be" data-saferedirecturl="https://www.youtube.com/watch?v=ZH4-2Netrog&feature=youtu.be" target="_blank"><img border="0" width="100%"
                                                       src="https://codingclap.github.io/botsync-newsletter_nov/images/second-header.jpg"
-                                                      alt="botsync-newsletter" style="display:block" class="to100pc">
+                                                      alt="botsync-newsletter" style="display:block" class="to100pc"></a>
                                                 </td>
 
                                              </tr>
@@ -434,14 +434,14 @@
                                                       style="padding:0;margin:20px 0 5px; text-align:left; cursor: pointer;">
                                                       <img alt="" width="220px"
                                                          src="https://codingclap.github.io/botsync-newsletter-october-2022/images/15000_Trips.png"
-                                                         style="margin-top: 0px; border:0"></a>
+                                                         style="margin-top: 0px; border:0"> 
                                                    </p>
-                                                   <a style="font-size:18px;font-family: 'poppins-semibold',sans-serif;color:#ed7d31;text-align:center;text-decoration:none;display:block;font-weight:bold;line-height:20px;background-color:#fdf3ec;padding:15px 0px 20px 0px;letter-spacing:0.5px;border-radius:0px;text-decoration: none;text-align: left;"
+                                                   <!-- <a style="font-size:18px;font-family: 'poppins-semibold',sans-serif;color:#ed7d31;text-align:center;text-decoration:none;display:block;font-weight:bold;line-height:20px;background-color:#fdf3ec;padding:15px 0px 20px 0px;letter-spacing:0.5px;border-radius:0px;text-decoration: none;text-align: left;"
                                                       href="https://www.linkedin.com/posts/botsync_factory-material-flow-automation-with-mag-activity-6985941431240572928-EVEV/?utm_source=share&utm_medium=member_android"
                                                       title="taarey" target="_blank"
                                                       data-saferedirecturl="https://www.linkedin.com/posts/botsync_factory-material-flow-automation-with-mag-activity-6985941431240572928-EVEV/?utm_source=share&utm_medium=member_android">
                                                       Watch the video >
-                                                   </a>
+                                                   </a> -->
                                                 </td>
 
                                                 <td valign="top"
