--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                                 <td valign="top"
                                                    style="font-family:'Arial',sans-serif; background-color:#fff; text-align:left; width:100%; padding: 10px 0px 10px 0px;">
 
-                                                   <a hraf="https://www.youtube.com/watch?v=ZH4-2Netrog&feature=youtu.be" data-saferedirecturl="https://www.youtube.com/watch?v=ZH4-2Netrog&feature=youtu.be" target="_blank"><img border="0" width="100%"
+                                                   <a href="https://www.youtube.com/watch?v=ZH4-2Netrog&feature=youtu.be" data-saferedirecturl="https://www.youtube.com/watch?v=ZH4-2Netrog&feature=youtu.be" target="_blank"><img border="0" width="100%"
                                                       src="https://codingclap.github.io/botsync-newsletter_nov/images/second-header.jpg"
                                                       alt="botsync-newsletter" style="display:block" class="to100pc"></a>
                                                 </td>
