--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                                    </p>
 
                                                    <p style="line-height:28px;color:#191919; font-size:16px; text-decoration:none;display:block; text-align:justify;font-family:'poppins-regular',sans-serif;font-weight:500;padding: 5px 0px 10px 0px;margin: 5px 0px 10px 0px;"
-                                                      target="_blank">Our automation solution with MAG300 AMR at Bollore Logistics Singapore Blue Hub is a unique solution design to address operations flow among 3 areas - VNA pallet storage, Value-Added Services, and Bin ASRS. We were pleased to have a few officials from <a href="https://www.edb.gov.sg/"
+                                                      target="_blank">Our automation solution with MAG300 AMR at <a href="https://www.bollore-logistics.com/en/country/singapore/" data-saferedirecturl="https://www.bollore-logistics.com/en/country/singapore/" target="_blank"> Bollore Logistics Singapore</a> Blue Hub is a unique solution design to address operations flow among 3 areas - VNA pallet storage, Value-Added Services, and Bin ASRS. We were pleased to have a few officials from <a href="https://www.edb.gov.sg/"
                                                       data-saferedirecturl="https://www.edb.gov.sg/"
                                                       target="_blank" >Singapore Economic Development Board (EDB)</a> and <a href="https://www.enterprisesg.gov.sg/"
                                                       data-saferedirecturl="https://www.enterprisesg.gov.sg/"
@@ -432,9 +432,9 @@
                                                 <td valign="top" align="left">
                                                    <p
                                                       style="padding:0;margin:20px 0 5px; text-align:left; cursor: pointer;">
-                                                      <img alt="" width="220px"
+                                                      <a href="https://www.linkedin.com/posts/botsync_factory-material-flow-automation-with-mag-activity-6985941431240572928-EVEV/?utm_source=share&utm_medium=member_desktop" data-saferedirecturl="https://www.linkedin.com/posts/botsync_factory-material-flow-automation-with-mag-activity-6985941431240572928-EVEV/?utm_source=share&utm_medium=member_desktop" target="_blank"> <img alt="" width="220px"
                                                          src="https://codingclap.github.io/botsync-newsletter-october-2022/images/15000_Trips.png"
-                                                         style="margin-top: 0px; border:0"> 
+                                                         style="margin-top: 0px; border:0"> </a>
                                                    </p>
                                                    <!-- <a style="font-size:18px;font-family: 'poppins-semibold',sans-serif;color:#ed7d31;text-align:center;text-decoration:none;display:block;font-weight:bold;line-height:20px;background-color:#fdf3ec;padding:15px 0px 20px 0px;letter-spacing:0.5px;border-radius:0px;text-decoration: none;text-align: left;"
                                                       href="https://www.linkedin.com/posts/botsync_factory-material-flow-automation-with-mag-activity-6985941431240572928-EVEV/?utm_source=share&utm_medium=member_android"
@@ -503,7 +503,7 @@
                                                                </p>
                                                                <p style="line-height:25px;color:#000; font-size:16px; text-decoration:none;display:block; text-align:left;padding:0;margin:1px 0 15px 0;font-family:'poppins-regular',sans-serif"
                                                                   target="_blank">
-                                                                  We showcased our latest automation solution and MAG1000 AMR at Industrial Transformation ASIA-PACIFIC Exhibition held during 18-20 October in Singapore. The team had a great time interacting with potential customers and partners at the full-scale physical event.
+                                                                  We showcased our latest automation solution and MAG1000 AMR at Industrial Transformation ASIA-PACIFIC Exhibition held during 18-20 October in Singapore. The team had a great time interacting with potential customers and partners at the event.
 
                                                                </p>
                                                                <table style="width: 51%; border-collapse: collapse;"
